<resources>
    <string name="app_name">会生意</string>
    <string name="home_page">首页</string>
    <string name="home_vip">爱会员</string>
    <string name="home_order">云订单</string>
    <string name="home_data">数据窗</string>
    <string name="home_market">商学院</string>
    <string name="home_me">我的</string>
    <string name="input_user_account">请输入账号（客户ID）</string>
    <string name="input_user_name">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="forget_pw_title">忘记密码</string>
    <string name="user_name_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="forget_password_tip">使用您的手机号找回密码，验证码将通过短信发到您的手机上</string>
    <string name="input_mendian_number">请输入门店编号</string>
    <string name="input_sms_code">请输入验证码</string>
    <string name="set_your_new_password">请妥善保管好您的密码，请勿告诉他人</string>
    <string name="set_new_psw_tip">请设置你的新密码</string>
    <string name="submit_new_passwd">提交</string>
    <string name="complete">完成</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_new_password_again">请确认新密码</string>
    <string name="password_not_equal">两次密码不相同</string>
    <string name="immediate_experience">立 即 体 验</string>
    <string name="loading">请稍等</string>
    <string name="account_expiration">账号已过期，请重新登陆</string>
    <string name="network_not_connect">请检查网络是否已连接</string>
    <string name="not_input_phone_number">手机号码未填写</string>
    <string name="not_match_phone_number">请输入正确的手机号码</string>
    <string name="login_exit">退出登录</string>
    <string name="input_origin_psw">请输入旧密码</string>
    <string name="affirm">确定</string>
    <string name="cancel">取消</string>
    <string name="download">下载</string>
    <string name="next">下一步</string>
    <string name="no_data">暂无数据</string>
    <string name="send">发送</string>
    <string name="sdNotAvailable">SD卡不可用</string>
    <string name="date_picker_title">选择日期</string>
    <string name="month_picker_title">选择月份</string>
    <string name="permission">请授予app操作权限</string>
    <string name="click_refresh">网络异常，点击刷新</string>
    <string name="gen_remarks">备注</string>
    <string name="jump_ignore">跳过</string>
    <string name="version_update">版本更新...</string>
    <string name="download_progress">下载进度:%d%%/100%%</string>
    <string name="download_finish">下载完成，点击安装</string>
    <string name="get_permission">获取app需要权限</string>
    <string name="unkonw">未知</string>
    <string name="system_error">服务系统异常</string>
    <string name="web_page_not_find">网页出错了，请稍后再访问</string>
    <string name="syn_error">同步服务器失败</string>
    <string name="syn_success">同步服务器成功</string>
    <string name="system_respon_error">服务器返回错误</string>
    <string name="data_empty">数据为空</string>
    <string name="search_tip">搜索会员或订单</string>
    <string name="precise_recommendation_title">精准推荐</string>
    <string name="precise_recommendation_sub_title">搜集热门资讯精准推荐给需要的用户</string>
    <string name="toutiao_title">今日头条</string>
    <string name="banner_sub_title_1">新品上市，新年的钟声随雪花飘荡，和草莓雪人...</string>
    <string name="banner_sub_title_2">新品上市，新年的钟声随雪花飘荡，和草莓雪人...</string>
    <string name="banner_sub_title_3">新品上市，新年的钟声随雪花飘荡，和草莓雪人...</string>
    <string name="target_me_title">我的任务指标</string>
    <string name="target_me_sub_title">销售完成情况</string>
    <string name="target_finish">完成</string>
    <string name="target_margin">差额</string>
    <string name="target">目标</string>
    <string name="market_info_title">商学院</string>
    <string name="market_info_sub_title">分享有关提高店铺销量的新鲜资讯</string>
    <string name="search_order_tip">请输入订单号进行搜索</string>
    <string name="search_gift_order_tip">请输入礼品订单号进行搜索</string>
    <string name="search_vip_tip">请输入会员号进行搜索</string>
    <string name="order">订单</string>
    <string name="vip">会员</string>
    <string name="more">更多</string>
    <string name="week_update">周报上报</string>
    <string name="sale_feedback">售后反馈</string>
    <string name="pure_after_sale_follow">净水器售后跟进</string>
    <string name="vip_sale">重点热卖</string>
    <string name="coupon_verification">券码核销</string>
    <string name="product_verification">唯一码验证</string>
    <string name="youhuiquan_verification">优惠券验证</string>
    <string name="scan_next">扫描产品唯一码</string>
    <string name="coupon_point">优惠券/积分码：</string>
    <string name="coupon_point_hint">请输入券码或积分码进行手工验证</string>
    <string name="explain">说明：</string>
    <string name="clickverify">点击验证</string>
    <string name="sure">确认</string>
    <string name="back_home">返回首页</string>
    <string name="product_code_hint1">请输入唯一码编号进行手工验证</string>
    <string name="check_not_vip">检查到顾客还没成为会员\n是否注册加入</string>
    <string name="check_not_vip_and_update">检查到顾客可升级为Vip会员\n是否现在升级</string>
    <string name="now_add">现 在 加 入</string>
    <string name="not_need">不 需 要</string>
    <string name="now_update">现 在 升 级</string>
    <string name="not_update">不 升 级</string>
    <string name="not_register_tip">如果不注册会员，此唯一码将失效并不能进行注册操作</string>
    <string name="cancel_and_exit">去意已决</string>
    <string name="customer_nick">请输入顾客昵称</string>
    <string name="customer_phone_number">请输入顾客手机号码</string>
    <string name="send_sms_code">获取验证码</string>
    <string name="submit">提交</string>
    <string name="register_new_user">升级VIP会员</string>
    <string name="register_success">会员注册成功！\n积分已添加到你的账号</string>
    <string name="know">我知道了</string>
    <string name="verify">验证</string>
    <string name="coupon_not_exist">该券码不存在，请确认后重试</string>
    <string name="daijinquan">代金券</string>
    <string name="not_allow_recruit_vip">当前门店没有VIP名额了</string>
    <string name="feedback_send">上报反馈</string>
    <string name="feedback_title">反馈问题类型</string>
    <string name="bad_goods">货品损坏</string>
    <string name="miss_goods">货品缺漏</string>
    <string name="send_error_goods">货品错发</string>
    <string name="feedback_tip_des">请选择问题类型后再填写上报内容，让我们能够更快的处理你的订单</string>
    <string name="personal_info">个人中心</string>
    <string name="personal_qr_code">我的二维码</string>
    <string name="personal_store">我的微店</string>
    <string name="personal_benefit_coin">惠金币</string>
    <string name="personal_store_coupon">专享礼券</string>
    <string name="personal_store_rewards">我的奖励</string>
    <string name="setting">设置</string>
    <string name="change_store">切换店铺</string>
    <string name="schedule">待办事项</string>
    <string name="modified_psw">修改密码</string>
    <string name="user_feedback">用户反馈</string>
    <string name="function_infomation">功能介绍</string>
    <string name="device_manager">本机管理</string>
    <string name="about_us">关于我们</string>
    <string name="version">版本</string>
    <string name="copy_data">拷贝数据</string>
    <string name="scan_and_scan_tip">扫一扫上面二维码，访问我的微店</string>
    <string name="save_store_qr_image">点击保存到相册，随时随地分享我的微店给会员</string>
    <string name="scan_and_scan_error">二维码没加载成功，点击刷新</string>
    <string name="scan_and_scan_empty">本微店暂无二维码</string>
    <string name="save_to_image">保存到相册</string>
    <string name="store_manager">专卖店管理</string>
    <string name="store_photo">头像</string>
    <string name="store_name">专卖店名称</string>
    <string name="store_wechat">专卖店微信号</string>
    <string name="staff_manager">店员管理</string>
    <string name="sex_selected">性别选择</string>
    <string name="status_selected">状态选择</string>
    <string name="start_using">启用</string>
    <string name="stop_using">停用</string>
    <string name="info_not_complete">请完成所有信息</string>
    <string name="allow_check_vip_tel">允许查看会员手机号码</string>
    <string name="allow_check_vip_addr">允许查看会员地址</string>
    <string name="support_server">提供服务</string>
    <string name="water_purifier_install">净水器安装</string>
    <string name="water_purifier_try_use">净水器试用</string>
    <string name="water_purifier_change">净水器换滤芯</string>
    <string name="personal_tailor">私人订制</string>
    <string name="benefit_coin">惠金币</string>
    <string name="expenditure">支出</string>
    <string name="income">收入</string>
    <string name="not_used">未使用</string>
    <string name="used">已使用</string>
    <string name="new_add_staff">新增店员</string>
    <string name="staff_info_modified">店员资料修改</string>
    <string name="staff_no">编号</string>
    <string name="name">姓名</string>
    <string name="tel">手机号</string>
    <string name="sex">性别</string>
    <string name="hiredate">入职时间</string>
    <string name="password">密码</string>
    <string name="status">状态</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_tel">请输入手机号</string>
    <string name="select">请选择</string>
    <string name="set_password">请设置密码</string>
    <string name="key_product_upload">重点产品上报</string>
    <string name="sold_record">销售记录</string>
    <string name="inventory_record">库存记录</string>
    <string name="goods_in_count">进货量</string>
    <string name="goods_out_count">出货量</string>
    <string name="goods_origin_inventory">原始库存</string>
    <string name="goods_origin_inventory_flag">原始库存：</string>
    <string name="inventory_active_in_goods">活动期进货</string>
    <string name="inventory_active_out_goods">活动期出货</string>
    <string name="inventory_active_origin_goods">活动期库存</string>
    <string name="inventory_day_in_goods">当天进货</string>
    <string name="inventory_day_out_goods">当天出货</string>
    <string name="inventory_active_in_goods_percent">活动期出货比例</string>
    <string name="sales_cycle">销售周期：</string>
    <string name="dec">产品说明：</string>
    <string name="hot_sale">重点热卖</string>
    <string name="begin_inventory">期初库存：</string>
    <string name="new_update_time">最新更新时间：</string>
    <string name="total_income_count">累计进货：</string>
    <string name="month_income_count">本月进货：</string>
    <string name="total_outcome_count">累计出货：</string>
    <string name="month_outcome_count">本月出货：</string>
    <string name="surplus_count">剩余可用库存：</string>
    <string name="surplus_tip">*剩余可用库存=期初库存+累计进货量-累计出货量</string>
    <string name="action_out_proportion">活动期出货比例：</string>
    <string name="water_remind">净水器换滤芯提醒</string>
    <string name="product_enter">产品录入</string>
    <string name="scan_code">扫描二维码</string>
    <string name="search_product">搜索产品编码</string>
    <string name="inventory_up">库存升序</string>
    <string name="inventory_down">库存降序</string>
    <string name="filter">筛选</string>
    <string name="current_inventory">当前库存：</string>
    <string name="check_inventory">盘点库存：</string>
    <string name="sale_enter">销售录入</string>
    <string name="sale_history">销售历史</string>
    <string name="hand_enter">手工录入</string>
    <string name="sale_history_enter">销售历史录入</string>
    <string name="search_protuct_tip">输入产品编码、条形码或名称进行搜索</string>
    <string name="inventory">库存</string>
    <string name="shipment">出货</string>
    <string name="generate_list">生成清单</string>
    <string name="enter_product_count">录入产品：%d件</string>
    <string name="enter_date">录入日期</string>
    <string name="enter_product_list">录入%d件产品</string>
    <string name="product_code">产品编码</string>
    <string name="product_qr_code">条形码</string>
    <string name="product_name">产品名称</string>
    <string name="search_product_code_tip">请输入产品编码进行搜索</string>
    <string name="search_product_qr_code_tip">请输入产品条形码进行搜索</string>
    <string name="search_product_name_tip">请输入产品名称进行搜索</string>
    <string name="save">保存</string>
    <string name="no_enter_list">暂无录入记录</string>
    <string name="enter_list">录入清单</string>
    <string name="no_sale_list">没有相关数据</string>
    <string name="add_scan">扫描添加</string>
    <string name="add_hand">手动添加</string>
    <string name="message">消息</string>
    <string name="order_reminding_count">订单提醒( %d )</string>
    <string name="zixun_update_count">资讯更新( %d )</string>
    <string name="sytem_message_count">系统消息( %d )</string>
    <string name="member_zhaomu">会员招募报表</string>
    <string name="fans_change">粉丝转化率报表</string>
    <string name="member_status">会员状态报表</string>
    <string name="member_consume">会员消费流水</string>
    <string name="female_">女</string>
</resources>