<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/tool_bar_full_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lineColor"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/staff_no_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/white">
            <TextView
                style="@style/General_TextVew_For_PersonalInfo"
                android:text="@string/staff_no"/>
            <TextView
                android:id="@+id/staff_no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_80dp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_9b9b9b"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/normal"
                android:background="@null"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/staff_name_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white">
            <TextView
                style="@style/General_TextVew_For_PersonalInfo"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/staff_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_name"
                android:paddingRight="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_80dp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_9b9b9b"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/normal"
                android:background="@null"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/staff_tel_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white">
            <TextView
                style="@style/General_TextVew_For_PersonalInfo"
                android:text="@string/tel"/>
            <EditText
                android:id="@+id/staff_tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_tel"
                android:paddingRight="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_80dp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_9b9b9b"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/normal"
                android:background="@null"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/staff_sex_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white">
            <TextView
                style="@style/General_TextVew_For_PersonalInfo"
                android:text="@string/sex"/>
            <TextView
                android:id="@+id/staff_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/female_"
                android:layout_marginRight="@dimen/dimen_35dp"
                android:layout_marginLeft="@dimen/dimen_80dp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_9b9b9b"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/normal"
                android:background="@null"/>
            <ImageView style="@style/ImageView_ARROW_For_PersonalInfo"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/staff_hiredate_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white">
            <TextView
                style="@style/General_TextVew_For_PersonalInfo"
                android:text="@string/hiredate"/>
            <TextView
                android:id="@+id/staff_hiredate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/select"
                android:layout_marginRight="@dimen/dimen_35dp"
                android:layout_marginLeft="@dimen/dimen_80dp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_9b9b9b"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/normal"
                android:background="@null"/>
            <ImageView style="@style/ImageView_ARROW_For_PersonalInfo"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/staff_password_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white">
            <TextView
                style="@style/General_TextVew_For_PersonalInfo"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/staff_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/set_password"
                android:paddingRight="@dimen/dimen_16dp"
                android:layout_marginLeft="@dimen/dimen_80dp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_9b9b9b"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/normal"
                android:background="@null"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/staff_status_rl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white">
            <TextView
                style="@style/General_TextVew_For_PersonalInfo"
                android:text="@string/status"/>
            <TextView
                android:id="@+id/staff_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/start_using"
                android:layout_marginRight="@dimen/dimen_35dp"
                android:layout_marginLeft="@dimen/dimen_80dp"
                android:layout_gravity="center_vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/color_9b9b9b"
                android:gravity="right|center_vertical"
                android:textSize="@dimen/normal"
                android:background="@null"/>
            <ImageView style="@style/ImageView_ARROW_For_PersonalInfo"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>